--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
     "url": "https://github.com/mu-ts/logger/issues"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.7",
+    "@types/chai": "^4.2.9",
+    "@types/mocha": "^7.0.1",
     "@types/node": "^11.15.7",
+    "@types/sinon": "^7.5.2",
     "@types/uuid": "^3.4.7",
     "aws-sdk": "^2.624.0",
     "chai": "^4.2.0",
     "codecov": "^3.2.0",
-    "mocha": "^6.2.2",
+    "mocha": "^7.1.0",
     "nyc": "^14.1.1",
+    "sinon": "^9.0.0",
     "ts-mocha": "^6.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
