--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mocha": "^7.1.0",
     "nyc": "^14.1.1",
     "sinon": "^9.0.0",
+    "source-map-support": "^0.5.16",
     "ts-mocha": "^6.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
