--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
   "keywords": [
     "mu-ts",
     "S3",
-    "DB",
-    "AWS",
-    "S3DB",
-    "S3-DB"
+    "AWS"
   ],
   "licenses": [
     {
@@ -42,43 +39,9 @@
     "url": "https://github.com/mu-ts/logger/issues"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.9",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^11.15.7",
-    "@types/sinon": "^7.5.2",
-    "@types/uuid": "^3.4.7",
-    "aws-sdk": "^2.624.0",
-    "chai": "^4.2.0",
-    "codecov": "^3.2.0",
-    "mocha": "^7.1.0",
-    "nyc": "^14.1.1",
-    "sinon": "^9.0.0",
-    "source-map-support": "^0.5.16",
-    "ts-mocha": "^6.0.0",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "@mu-ts/configurations": "^2.0.1",
-    "@mu-ts/logger": "^3.0.6",
-    "uuid": "^3.4.0"
-  },
-  "nyc": {
-    "include": [
-      "src/*.ts",
-      "src/**/*.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register",
-      "source-map-support/register"
-    ],
-    "sourceMap": true,
-    "instrument": true,
-    "all": true
+    "@aws-sdk/client-s3": "^3.160.0",
+    "@types/node": "^18.7.14",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
   }
 }
