--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "nyc mocha -r ts-node/register spec/**/*.spec.ts",
     "coverage": "nyc report --reporter text-summary",
     "coverage-export": "nyc report --reporter=lcov > coverage.lcov",
-    "lint": "tslint -p .",
+    "lint": "tslint -p ./tsconfig.json",
     "clean": "rm -rf coverage lib .nyc_output"
   },
   "files": [
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.160.0",
+    "@tsconfig/node14": "^1.0.3",
     "@types/node": "^18.7.14",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
