--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@mu-ts/s3",
-  "version": "0.1.0",
-  "description": "Easier interaction with S3.",
+  "version": "0.2.0",
+  "description": "Simple functional wrapper around S3 SDK to make most S3 interactions a single function call.",
   "main": "./lib/index",
   "types": "./lib/index",
   "author": "matt.filion@gmail.com",
   "homepage": "https://github.com/mu-ts/s3#readme",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "tsc -p .",
     "test": "nyc mocha -r ts-node/register spec/**/*.spec.ts",
@@ -44,5 +48,24 @@
     "@types/node": "^18.7.14",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    "acorn": "^8.8.0",
+    "arg": "^4.1.3",
+    "acorn-walk": "^8.2.0",
+    "bowser": "^2.11.0",
+    "create-require": "^1.1.1",
+    "diff": "^4.0.2",
+    "entities": "^2.2.0",
+    "fast-xml-parser": "^3.19.0",
+    "make-error": "^1.3.6",
+    "tslib": "^2.4.0",
+    "uuid": "^8.3.2",
+    "v8-compile-cache-lib": "^3.0.1",
+    "yn": "^3.1.1"
+  },
+  "license": "ISC"
 }
