--- a/package.json
+++ b/package.json
@@ -42,30 +42,18 @@
   "bugs": {
     "url": "https://github.com/mu-ts/logger/issues"
   },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.252.0",
+    "uuid": "^8.3.2"
+  },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.160.0",
     "@tsconfig/node14": "^1.0.3",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.11.18",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.9.4"
   },
   "directories": {
     "lib": "lib"
-  },
-  "dependencies": {
-    "acorn": "^8.8.0",
-    "arg": "^4.1.3",
-    "acorn-walk": "^8.2.0",
-    "bowser": "^2.11.0",
-    "create-require": "^1.1.1",
-    "diff": "^4.0.2",
-    "entities": "^2.2.0",
-    "fast-xml-parser": "^3.19.0",
-    "make-error": "^1.3.6",
-    "tslib": "^2.4.0",
-    "uuid": "^8.3.2",
-    "v8-compile-cache-lib": "^3.0.1",
-    "yn": "^3.1.1"
   },
   "license": "ISC"
 }
