--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@tsconfig/node14": "^1.0.3",
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
