--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   },
   "scripts": {
     "build": "tsc -p .",
-    "test": "nyc mocha -r ts-node/register spec/**/*.spec.ts",
-    "coverage": "nyc report --reporter text-summary",
-    "coverage-export": "nyc report --reporter=lcov > coverage.lcov",
-    "lint": "tslint -p ./tsconfig.json",
+    "test": "mocha -r ts-node/register spec/**/*.spec.ts",
     "clean": "rm -rf coverage lib .nyc_output"
   },
   "files": [
@@ -47,9 +44,13 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.3",
+    "@testdeck/mocha": "^0.3.3",
+    "@tsconfig/node18": "^1.0.1",
+    "@types/chai": "^4.3.4",
     "@types/node": "^18.11.18",
     "@types/uuid": "^9.0.0",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
