--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 /* Reference: https://www.typescriptlang.org/docs/handbook/compiler-options.html */
 {
-  "extends": "@tsconfig/node14/tsconfig.json",
+  "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
+    "experimentalDecorators": true,
     "rootDir": "./src",
     "outDir": "./lib",
   },
