--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+
     "rootDir": "./src",
     "outDir": "./lib",
   },
