--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mu-ts/s3",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Simple functional wrapper around S3 SDK to make most S3 interactions a single function call.",
   "main": "./lib/index",
   "types": "./lib/index",
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@mu-ts/logger": "^3.2.0",
+    "@mu-ts/serialization": "^1.0.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
