--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
   },
   "dependencies": {
     "@mu-ts/logger": "^3.2.0",
-    "@mu-ts/serialization": "^1.0.2",
-    "uuid": "^9.0.1"
+    "@mu-ts/serialization": "^1.0.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.7",
